2006-09-20  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c: Fix decrypt error message. 
    * plugins/epiphany/seahorse-extension.c: Added decrypting and 
    verifying text and importing keys from a text field. Fixes 356447
    * plugins/applet/seahorse-applet.c:
    * plugins/epiphany/seahorse.ephy-extension.in.in:
    * src/seahorse-key-manager.c: Change to new website.

2006-09-19  Adam Schreiber  <sadam@clemson.edu>

    * plugins/epiphany/Makefile.am:
    * plugins/epiphany/seahorse-extension.c:
    * plugins/epiphany/mozilla/Makefile.am:
    * plugins/epiphany/mozilla/mozilla-helper.cpp:
    * plugins/epiphany/mozilla/mozilla-helper.h: Add signing of text 
    fields.

2006-09-18  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-gkeyring-source.c: Fix assertion when gnome-keyring
    doesn't have a default keyring. Fixes #356550
    
2006-09-18  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Fix building without epiphany plugin dependencies.
    Fixes 356584
    * agent/seahorse-agent-ssh.c: Fix crasher on AMD64 systems
    Fixes 356528.  Patch by Gustavo Carneiro.

2006-09-17  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Fix errors with build epiphany plugin on
    versions of GNOME newer than 2.14.0
    * plugins/epiphany/Makefile.am: Remove comment preventing 
    proper building for some users.
    * configure.in:
    * libcryptui/cryptui.h:
    * m4/epiphany.m4(added):
    * m4/gecko.m4(added):
    * plugins/Makefile.am:
    * plugins/epiphany(added):
    * plugins/epiphany/Makefile.am(added):
    * plugins/epiphany/eel-gconf-extensions.h(added):
    * plugins/epiphany/ephy-debug.h(added):
    * plugins/epiphany/seahorse-extension.c(added):
    * plugins/epiphany/seahorse-extension.h(added):
    * plugins/epiphany/seahorse.c(added):
    * plugins/epiphany/seahorse.ephy-extension.in.in(added):
    * plugins/epiphany/mozilla/Makefile.am(added):