@@ -1,5 +1,7 @@
 2006-09-20  Adam Schreiber  <sadam@clemson.edu>
 
+    * plugins/epiphany/seahorse-extension.c: Fix segfault with context 
+    menu on non-input callbacks.
     * plugins/applet/seahorse-applet.c: Fix decrypt error message. 
     * plugins/epiphany/seahorse-extension.c: Added decrypting and 
     verifying text and importing keys from a text field. Fixes 356447
